Add zone & gpu_type display_name
